--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <title>Love</title>
+    <title>Document</title>
 </head>
 <body>
     
